fixtures/frontend/milestone-2/invalid/impure-gate-predicate/main.aivi
type User = { active: Bool }

val seed:User = { active: True }

sig users:Signal User = seed
sig ready:Signal Bool = True

sig filtered:Signal User =
    users
     ?|> ready
